[package]
name = "bucky-error"
version = "0.1.0"
edition = "2021"
description = "Bucky error library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = '1.0', features = ['derive'] }
log = "0.4.21"
int-enum = "0.4"
serde_json = "1.0.116"
hex = {version = "0.4.3", optional = true}
rsa = {version = "0.9.6", optional = true}
zip = {version = "0.6.6", optional = true}
url = {version = "2.5.0", optional = true}
http-types = {version = "2.12.0", optional = true}
rusqlite = {version = "0.30.0", optional = true}
async-std = {version = "1.12.0", optional = true}
sqlx = {version = "0.7.4", optional = true}

[features]
